<resources>
    <string name="app_name">Music Shop</string>
    <string name="name">Name</string>
    <string name="sale_30">Sale -30%</string>
    <string name="select_item">Select Item:</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="order_price">Order Price</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total:</string>
</resources>