<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/ivBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:srcCompat="@drawable/img_music_shop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:rotation="-20"
        android:text="@string/sale_30"
        android:textColor="@color/orange"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/ivBanner"
        app:layout_constraintEnd_toEndOf="@id/ivBanner"
        app:layout_constraintStart_toStartOf="@id/ivBanner"
        app:layout_constraintTop_toTopOf="@+id/ivBanner" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/select_item"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBanner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvSelectItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSelectItem"
        app:layout_constraintTop_toTopOf="@+id/tvSelectItem" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProductImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/spSpinner"
        app:srcCompat="@drawable/img_guitar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrderPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/order_price"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/tvQuantityTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProductImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/_0"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvOrderPriceTitle"
        app:layout_constraintStart_toStartOf="@id/tvOrderPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/tvOrderPriceTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/quantity"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvOrderPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/ivProductImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnQuantityReduce"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantityTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuantity"
        android:layout_width="50sp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnQuantityIncrease"
        app:layout_constraintEnd_toEndOf="@+id/tvQuantityTitle"
        app:layout_constraintStart_toStartOf="@+id/tvQuantityTitle"
        app:layout_constraintTop_toTopOf="@id/btnQuantityIncrease" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnQuantityIncrease"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toEndOf="@+id/tvQuantity"
        app:layout_constraintTop_toBottomOf="@id/tvQuantityTitle" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:enabled="false"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>